# BA425321_DRXNucRevisited

./: CMakeLists.txt  README.md
scripts/: ComparedResultsBinary_03.sh  ComparedResultsBinary_03.sh.ods  DRXNUC_AutoDetectSpeedReduction_01.m  DRXNUC_CompareSglDblPrecisionNumerics_01.m  DRXNUC_PlotDisloFieldEvo_02.m
src/: DRXNUC_Abinitio.h  DRXNUC_Datatypes.h  DRXNUC_Information.cpp  DRXNUC_Information.h  DRXNUC_Kernel.cpp  DRXNUC_Kernel.h  DRXNUC_Main.cpp  DRXNUC_Math.cpp  DRXNUC_Math.h  DRXNUC_Numerics.h  DRXNUC_Parallelization.h  DRXNUC_STLIncludes.h  DRXNUC_Settings.cpp  DRXNUC_Settings.h
